@@ -1,3 +1,7 @@
+2011-06-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/Renderer/RPC.pm: new RPC method: SEARCH_NODEID
+
 2011-06-03  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/Renderer/RPC.pm: New RPC method: AGGREGATE_DS
